--- a/config/locales/translation.nl.yml
+++ b/config/locales/translation.nl.yml
@@ -31,7 +31,7 @@ nl:
     - vr
     - za
     month_names:
-    -
+    - Januari
     - januari
     - februari
     - maart
@@ -43,9 +43,8 @@ nl:
     - september
     - oktober
     - november
-    - december
     abbr_month_names:
-    -
+    - Jan
     - jan
     - feb
     - mrt
@@ -57,7 +56,6 @@ nl:
     - sep
     - okt
     - nov
-    - dec
   time:
     am: "'s ochtends"
     pm: "'s middags"
@@ -4161,8 +4159,8 @@ nl:
       impounded_bikes: In beslag genomen fietsen
       customize_emails: Pas e-mails aan
       graduated_notifications: Gegradueerde meldingen
-      hot_sheet: Hot Sheet
-      hot_sheet_configuration: Hot Sheet configuratie
+      stolen_hot_sheet: Stolen Bike Hot Sheet
+      stolen_hot_sheet_configuration: Stolen Bike Hot Sheet-configuratie
     application_bikehub:
       contact: contact
       home: Thuis
@@ -5092,8 +5090,8 @@ nl:
       parking_notification_unregistered: Niet-geregistreerde fietsmelding
       customize_emails: Pas e-mails aan
       graduated_notifications: Gegradueerde meldingen
-      hot_sheet: Hot Sheet
-      hot_sheet_configuration: Hot Sheet-configuratie
+      stolen_hot_sheet: Gestolen Hot Sheet
+      stolen_hot_sheet_configuration: Gestolen Hot Sheet-configuratie
     errors:
       error: Fout
       errors_prevented_this_from_being_saved: "%{errors_count} heeft voorkomen dat
@@ -5202,7 +5200,7 @@ nl:
       zipcode: Postcode
       why_you_should_text: Lees waarom u zou moeten
       daily_hot_sheet_notifications_html: Ontvang dagelijks <em>%{org_name}</em> %{hot_sheets_link}
-      hot_sheets: Hot Sheets
+      stolen_hot_sheets: Gestolen Bike Hot Sheets
     edit_sharing:
       additional_link: Aanvullende link
       choose_file: Kies bestand...
