--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4451,7 +4451,7 @@ en:
         name: Name
         org_email_address_html: Email address <em>%{org_name}</em> bike registrations
           will be sent from
-        org_settings_html: Settings
+        org_settings: Settings
         organization_logo: Organization logo
         organization_type: Organization type
         registration_email: Registration email
