--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4451,7 +4451,7 @@ en:
         name: Name
         org_email_address_html: Email address <em>%{org_name}</em> bike registrations
           will be sent from
-        org_settings_html: "<em>%{org_name}</em> settings"
+        org_settings: Settings
         organization_logo: Organization logo
         organization_type: Organization type
         registration_email: Registration email
@@ -5195,7 +5195,7 @@ en:
       no_day_with_year: "%B %d %Y"
       short_with_hour: "%l%P - %m.%d.%y"
       short_with_year: "%a, %B %d %Y"
-      standard_display: "%A, %B %d"
+      standard_display: "%a, %B %d"
   user_embeds:
     show:
       bike: Bike
