--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1588,6 +1588,15 @@ en:
       applications:
         ensure_app_owner!:
           not_your_application: That isn't your application
+    org_public:
+      base:
+        ensure_access_to_virtual_line!:
+          location_does_not_have_access: >-
+            %{location_name} doesn't have virtual line turned on, please contact %{org_name}.
+          org_does_not_have_access: "%{org_name} doesn't have access to that, please
+            contact Bike Index support."
+          unable_to_find_location: Unable to find the location "%{location_id}" for
+            %{org_name}
     organizations:
       create:
         organization_created: Organization Created successfully!
