--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1621,6 +1621,10 @@ en:
           could_not_update: Could not update activity status. Please try again later.
           status_updated: Activity status updated.
       base:
+        ensure_access_to_appointments!:
+          must_be_an_admin: >-
+            Your organization doesn't have access to that, please contact Bike Index
+            support.
         ensure_admin!:
           must_be_org_admin: You have to be an organization administrator to do that!
         ensure_ambassador_authorized!:
@@ -1632,9 +1636,6 @@ en:
           not_a_member_of_that_org: You're not a member of that organization!
         ensure_not_ambassador_organization!:
           must_be_an_admin: You have to be an admin to do that!
-        ensure_access_to_appointments!:
-          must_be_an_admin: Your organization doesn't have access to that, please contact Bike Index
-            support.
       bikes:
         update:
           unknown_update_action: Unknown update action. Please contact support@bikeindex.org
@@ -3710,7 +3711,6 @@ en:
       graduated_notifications: Graduated notifications
       help: Help
       impounded_bikes: Impounded Bikes
-      virtual_line: Virtual line
       incomplete_registrations: Incomplete registrations
       lightspeed_integration_panel: Lightspeed Integration Panel
       log_in: log in
@@ -3735,6 +3735,7 @@ en:
       user_settings: "%{user_email} settings"
       users: Users
       view_org: View %{org_name}
+      virtual_line: Virtual line
       your_bikes: Your bikes
     application_bikehub:
       accounts_powered_by_bike_index: BikeHub accounts are powered by Bike Index –
@@ -5078,7 +5079,6 @@ en:
       how_integration_works: how the integration works
       impounded_bikes: Impounded
       incomplete_registrations: Incomplete registrations
-      virtual_line: Virtual line
       integrate_bike_index_with_ascend: Integrate Bike Index with Ascend
       integrate_bike_index_with_lightspeed: Integrate Bike Index with Lightspeed
       lightspeed_integration_panel: Lightspeed Integration Panel
@@ -5107,6 +5107,7 @@ en:
       viewing_our_streamlined_page: >-
         You're currently viewing our streamlined Bike Shop registration page, which
         is what we recommend using
+      virtual_line: Virtual line
     period_select:
       all: All
       custom: custom
