--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1621,6 +1621,10 @@ en:
           could_not_update: Could not update activity status. Please try again later.
           status_updated: Activity status updated.
       base:
+        ensure_access_to_appointments!:
+          must_be_an_admin: >-
+            Your organization doesn't have access to that, please contact Bike Index
+            support.
         ensure_admin!:
           must_be_org_admin: You have to be an organization administrator to do that!
         ensure_ambassador_authorized!:
@@ -3731,6 +3735,7 @@ en:
       user_settings: "%{user_email} settings"
       users: Users
       view_org: View %{org_name}
+      virtual_line: Virtual line
       your_bikes: Your bikes
     application_bikehub:
       accounts_powered_by_bike_index: BikeHub accounts are powered by Bike Index –
@@ -5102,6 +5107,7 @@ en:
       viewing_our_streamlined_page: >-
         You're currently viewing our streamlined Bike Shop registration page, which
         is what we recommend using
+      virtual_line: Virtual line
     period_select:
       all: All
       custom: custom
