--- a/config/locales/translation.nl.yml
+++ b/config/locales/translation.nl.yml
@@ -5148,9 +5148,8 @@ nl:
         financiert onze efforst om fietsdiefstal te bestrijden!
       nonprofit_501c3: 501 (c) (3) non-profit
       skip: Overslaan
-      header_june_2020: Halfjaarlijkse inzamelingsactie tot 1 juli
-      subheader_june_2020_html: We zien deze zomer een drastische toename van fietsdiefstal.
-        <br> Help ons meer fietsen te beschermen en te herstellen dan ooit.
+      header: Help onze inspanningen ondersteunen!
+      subheader: Als non-profit vertrouwen wij op uw steun.
     law_enforcement_donation_modal:
       bikeindex_is_a_nonprofit: Bike Index is een 501 (c) (3) non-profit. We zijn
         afhankelijk van donaties om deze diensten te leveren. We raden wetshandhavingsinstanties
