finish invoices endlessness sorting

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5031,6 +5031,7 @@ en:
       privacy_policy: Privacy policy
       resources: Resources
       schools_and_universities: Schools and Universities
+      security: Security
       stolen_bike_map: Stolen Bike Map
       stolen_bike_recoveries: Stolen Bike Recoveries
       store: Store
