add link to universities page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3697,6 +3697,8 @@ en:
         the lack of a universal bike registry. With our consolidated university registration
         sites, it's easier for police and transportation departments to search and
         recover campus bicycles.
+      must_read: Must read -
+      six_best_features_for_schools: Bike Index’s six best features for campus bike management
       your_students_can_register_their_bikes: >-
         Your students can register their bikes, verify ownership, and alert the community
         to missing bikes from anywhere. All they need is any smartphone or laptop.
