--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3680,6 +3680,7 @@ en:
       how_it_works: How it works
       keep_campus_bikes_in_order: Keep campus bikes in order
       make_bike_registration_better: Make bike registration better
+      must_read: Must read -
       protecting_bikes_on_campus_can_be: Protecting bikes on campus can be a full-time
         job. Let us help.
       read_about_our_html: >-
@@ -3687,6 +3688,8 @@ en:
         Bike Index's partners, visit our partners page, and for information on partnering
         with Bike Index, please contact us.
       related_articles: 'Related articles:'
+      six_best_features_for_schools: Bike Index’s six best features for campus bike
+        management
       trusted_by_top_universities: Trusted by top universities
       universities_should_use_bike_index_as_the: Universities should use Bike Index
         as their registration system of choice
@@ -3697,8 +3700,6 @@ en:
         the lack of a universal bike registry. With our consolidated university registration
         sites, it's easier for police and transportation departments to search and
         recover campus bicycles.
-      must_read: Must read -
-      six_best_features_for_schools: Bike Index’s six best features for campus bike management
       your_students_can_register_their_bikes: >-
         Your students can register their bikes, verify ownership, and alert the community
         to missing bikes from anywhere. All they need is any smartphone or laptop.
