--- a/config/locales/translation.nl.yml
+++ b/config/locales/translation.nl.yml
@@ -4125,6 +4125,9 @@ nl:
         van overal. Het enige dat ze nodig hebben is elke smartphone of laptop. Je
         hebt toegang tot de gegevens erachter om te begrijpen hoe je fietsen op je
         campus het beste kunt beschermen.
+      must_read: Moet lezen -
+      six_best_features_for_schools: De zes beste functies van Bike Index voor fietsbeheer
+        op de campus
     packages_list:
       forever: Voor altijd
       free: GRATIS
