--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2407,6 +2407,9 @@ en:
       all_you_have_to_do_is_go_to_html: >-
         All you have to do is go to %{link}, where you'll be asked to authorize Bike
         Index to access your Lightspeed Account.
+      already_have_a_sophisticated_html: >-
+        Already have a sophisticated email connection with your customers? Bike Index
+        can integrate with your existing flow - email %{link} for setup.
       bicycles_sold_before_you_activated_lights: >-
         Bicycles sold before you activated Lightspeed Retail integration will not
         be registered.
@@ -2449,7 +2452,7 @@ en:
       were_happy_to_answer_any_questions_html: >-
         We're happy to answer any questions you have about making Bike Index work
         with Lightspeed Retail and we're always looking for ways to improve the integration.
-        Please %{link} with any questions, concerns, comments, or suggestions.
+        Please email %{link} with any questions, concerns, comments, or suggestions.
       write_do_not_register: >-
         If a customer doesn't want a bike to be added to Bike Index, simply write
         "DO NOT REGISTER" in the notes for the sale and the bicycle will not be registered.
@@ -3680,6 +3683,7 @@ en:
       how_it_works: How it works
       keep_campus_bikes_in_order: Keep campus bikes in order
       make_bike_registration_better: Make bike registration better
+      must_read: Must read -
       protecting_bikes_on_campus_can_be: Protecting bikes on campus can be a full-time
         job. Let us help.
       read_about_our_html: >-
@@ -3687,6 +3691,8 @@ en:
         Bike Index's partners, visit our partners page, and for information on partnering
         with Bike Index, please contact us.
       related_articles: 'Related articles:'
+      six_best_features_for_schools: Bike Index’s six best features for campus bike
+        management
       trusted_by_top_universities: Trusted by top universities
       universities_should_use_bike_index_as_the: Universities should use Bike Index
         as their registration system of choice
